fixes table column spacing issues

--- a/frontend/src/Components/LeagueTable/LeagueTable.module.scss
+++ b/frontend/src/Components/LeagueTable/LeagueTable.module.scss
@@ -3,6 +3,8 @@
 
 $breakpoints: variables.$resolution-breakpoints;
 
+
+
 .table {
     border-collapse: collapse;
     margin: 0;
@@ -41,12 +43,20 @@ $breakpoints: variables.$resolution-breakpoints;
             @include media(">phone") {
                 padding: 0.75rem 1rem;
 
-                // max&min width for S U N D
+                // max&min width for Spiele S U N D Punkte
+                &:nth-child(6),
                 &:nth-child(7),
                 &:nth-child(8),
-                &:nth-child(9) {
+                &:nth-child(9),
+                &:nth-child(12) {
                     min-width: 1rem;
                     max-width: 1rem;
+                }
+
+                // max&min width for Tore
+                &:nth-child(10) {
+                    min-width: 2rem;
+                    max-width: 2rem;
                 }
 
                 // highlighted columns
@@ -57,7 +67,7 @@ $breakpoints: variables.$resolution-breakpoints;
                 }
 
 
-                &:nth-child(6),
+                // &:nth-child(6),
                 &:nth-child(11),
                 &:nth-child(12) {
                     text-align: right;
@@ -77,12 +87,25 @@ $breakpoints: variables.$resolution-breakpoints;
                 // font-size: 0.8rem;
 
 
-                // max&min width for S U N D
+                // max&min width for Sp S U N D
+                &:nth-child(6),
                 &:nth-child(7),
                 &:nth-child(8),
                 &:nth-child(9) {
                     min-width: 1rem;
                     max-width: 1rem;
+                }
+
+                // max&min width for Pkt
+                &:nth-child(11) {
+                    min-width: 1.2rem;
+                    max-width: 1.2rem;
+                }
+
+                // max&min width for Tore
+                &:nth-child(10) {
+                    min-width: 2rem;
+                    max-width: 2rem;
                 }
 
                 // highlighted columns
@@ -92,7 +115,7 @@ $breakpoints: variables.$resolution-breakpoints;
                     color: black;
                 }
 
-                &:nth-child(6),
+                // &:nth-child(6),
                 &:nth-child(11) {
                     text-align: right;
                 }
@@ -158,6 +181,7 @@ $breakpoints: variables.$resolution-breakpoints;
         .colDOWN {
             background-color: variables.$down-colour;
         }
+
         // arrow colours
         .colourPos svg {
             color: variables.$positive-colour;
